# c-homeworks

./: .gitignore
hw1/: CMakeLists.txt  Readme.md  main.c
hw2/: CMakeLists.txt  Readme.md  main.c
hw2/encdoing/: cp1251.h  iso88595.c  koi8r.c  koi8r.h
hw2/encoding/: cp1251.c  iso88595.h
hw3/: CMakeLists.txt  Readme.md  hashtable.c  hashtable.h  main.c
hw3/examples/: test.txt
hw4/: CMakeLists.txt  Readme.md  main  main.c
hw6/: CMakeLists.txt  Readme.md  clog.c  clog.h  main.c
hw7/: CMakeLists.txt  Readme.md  main.c
hw8/: Add_free_for_repo_and_href_(fix_memory_leak).patch
